<resources>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="many">%d cupcakes</item>
    </plurals>
    <string name="app_name">JustComposeLabs</string>
    <string name="splashscreen">Splashscreen Compose</string>
    <string name="homescreen">HomeScreen Compose</string>
    <string name="profilescreen">ProfileScreen Compose</string>
    <string name="title_activity_all_feature">AllFeatureActivity</string>
    <string name="title_activity_using_view_in_compose">UsingViewInComposeActivity</string>
    <string name="title_activity_simple_search_bar_compose">SimpleSearchBarComposeActivity</string>
    <string name="title_activity_auto_complete_search_bar">AutoCompleteSearchBarActivity</string>
    <string name="title_activity_autocomplete_search_bar_iiactivity">
        AutocompleteSearchBarIIActivity
    </string>
    <string name="title_activity_search_screen">SearchScreenActivity</string>
    <string name="title_activity_lists_and_grids">ListsAndGridsActivity</string>
    <string name="title_activity_mars_photos">MarsPhotosActivity</string>
    <string name="title_activity_walk_through">WalkThroughActivity</string>
    <string name="title_activity_dice_roller">DiceRollerActivity</string>
    <string name="title_activity_view_model_state_flow_course">ViewModelStateFlowCourseActivity
    </string>
    <string name="title_activity_draggable_triangle">DraggableTriangleActivity</string>
    <string name="title_activity_compose_custom_view">ComposeCustomViewActivity</string>
    <string name="title_activity_lifecycle_compose">LifecycleComposeActivity</string>
    <string name="title_activity_remember_saveable">RememberSaveableActivity</string>
    <string name="title_activity_fun_with_flow_types">FunWithFlowTypesActivity</string>
    <string name="title_activity_timer_with_flow_types">TimerWithFlowTypesActivity</string>
    <string name="title_activity_fun_with_launched_effects">FunWithLaunchedEffectsActivity</string>
    <string name="title_activity_clone_jet_snack">CloneJetSnackActivity</string>

    <!-- codelabs cup cake -->
    <string name="greeting">Olá</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One Cupcake</string>
    <string name="six_cupcakes">Six Cupcakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \nFlavor: %2$s \nPickup date: %3$s \nTotal: %4$s \n\nThank you!</string>
    <string name="back_button">Back</string>


    <!-- close codelabs cup cake -->

    <!-- start codelabs dessert clicker -->
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_end">EndActivity</string>
    <string name="title_activity_side_effects">SideEffectsActivity</string>
    <string name="title_activity_dessert_codelabs">DessertCodelabsActivity</string>
    <string name="dessert_sold">Desserts sold</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="share">Share</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of $%2$d #AndroidDessertClicker</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="title_activity_dessert_codelabs_with_view_model">
        DessertCodelabsWithViewModelActivity
    </string>
    <string name="title_activity_open_modal_bottom_sheet">OpenModalBottomSheetActivity</string>
    <string name="mocked_rating_bar_value">4.7</string>
    <string name="mocked_value_bottom_sheet">(51)</string>
    <string name="mocked_label_bottom_sheet">12 min away</string>
    <string name="sample_street">740 Valencia St, San Fracisco, CA</string>
    <string name="sample_phone">(415) 349-0942</string>
    <string name="sample_date_hour">Wed, 10 AM - 9 PM</string>
    <string name="sample_status_payment">PROCEED PAYMENT</string>
    <string name="show_bottom_sheet">Show Bottom Sheet</string>
    <string name="show_bottom_sheet_dialog">Show Bottom Sheet Dialog</string>
    <string name="show_bottom_sheet_dialog_fragment">Show Bottom Sheet Dialog Fragment</string>
    <string name="persistent_bottom_sheet">Persistent Bottom Sheet</string>
    <string name="modal_bottom_sheet_bottomsheetdialog">Modal Bottom Sheet (BottomSheetDialog)</string>
    <string name="modal_bottom_sheet_bottomsheetdialogfragment">Modal Bottom Sheet (BottomSheetDialogFragment)</string>
    <string name="dandelion_chocolate">Dandelion Chocolate</string>
    <string name="send_mock_event">Send Mock Event Broadcast Receiver</string>
    <string name="title_activity_recomposition_highlighter">RecompositionHighlighterActivity
    </string>
    <string name="title_activity_infinite_circular_list">InfiniteCircularListActivity</string>
    <string name="title_activity_jet_chat_main">JetChatMainActivity</string>
    <string name="content_card_sample">1</string>
    <string name="score">score</string>
    <string name="title_activity_hello_message_remote_config">
        HelloMessageRemoteConfigActivity
    </string>
    <string name="title_activity_card_flip">CardFlipActivity</string>
    <string name="title_activity_coin_flip">CoinFlipActivity</string>
    <string name="title_activity_open_movie_database">OpenMovieDatabaseActivity</string>
    <string name="text_status_bar_default">Progress Bar</string>
    <string name="text_default_progress_bar">0</string>
    <string name="bt_add">adicionar</string>
    <string name="bt_remove">remover</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="zero">0\n</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment_in_compose">FragmentInComposeActivity</string>
    <string name="title_activity_fragment_screen_compose">FragmentScreenComposeActivity</string>
    <string name="main_content_below">Main Content Below</string>
    <string name="title_activity_show_load_custom_view">ShowLoadCustomViewActivity</string>
    <string name="loading_label">loading ...</string>
    <string name="title_activity_wrapper_load_view">WrapperLoadViewActivity</string>
    <string name="init_state_label">init</string>
    <string name="title_activity_rally">RallyActivity</string>

    <!-- end codelabs dessert clicker -->

    <!--
        codelabs Como testar no Jetpack Compose
        https://developer.android.com/codelabs/jetpack-compose-testing?hl=pt-br#0
     -->
    <string name="rally_app_name">Rally</string>
    <string name="total">Total</string>
    <string name="due">Due</string>
    <string name="account_redacted">• • • • • </string>
    <string name="accounts">Accounts</string>
    <string name="bills">Bills</string>
    <string name="sort">Sort</string>
    <string name="see_all">SEE ALL</string>
    <string name="hello_world">Hello World</string>
    <string name="font_scale_text_sample">Texto de exemplo para mudança de escala em tempo de execução</string>
    <string name="increase_font_scale">Aumentar Escala de Fonte</string>
    <string name="decrease_font_scale">Diminuir escala de fonte</string>
    <string name="toggle_button_handle_orientation_screen_portrait">Portrait</string>
    <string name="toggle_button_handle_orientation_screen_landscape">Landscape</string>
    <string name="title_activity_movable_content_of_sample">MovableContentOfSampleActivity</string>
    <!-- ends codelabs Como testar no Jetpack Compose -->

</resources>
