<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context=".tutorial.views.animation.textcounteranimation.TextCounterAnimationActivity">

    <Button
        android:id="@+id/bt_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bt_reset"
        android:text="@string/start"
        />

    <Button
        android:id="@+id/bt_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_start"
        app:layout_constraintBottom_toTopOf="@+id/text_float_counter"
        android:text="@string/reset"
        />

    <TextView
        android:id="@+id/text_float_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_reset"
        app:layout_constraintBottom_toTopOf="@+id/text_int_counter"
        android:textSize="120sp"
        android:text="@string/zero"
        android:textAlignment="center"
        />


    <TextView
        android:id="@+id/text_int_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_float_counter"
        android:textSize="120sp"
        android:text="@string/zero"
        android:textAlignment="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>