<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".tutorial.google.view.preferences.HandlerConfigurationChangesActivity">

    <TextView
        android:id="@+id/text_view_sample_font_scale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/font_scale_text_sample"
        android:textAlignment="center"
        />

    <!--
        https://developer.android.com/reference/com/google/android/material/slider/RangeSlider
    -->

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider_font_scale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_sample_font_scale"
        app:layout_constraintBottom_toTopOf="@+id/container_increase_decrease_font_scale_buttons"
        android:padding="8dp"
        android:valueFrom="1.0"
        android:valueTo="2.0"
        android:stepSize="0.1"
        />

    <LinearLayout
        android:id="@+id/container_increase_decrease_font_scale_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/range_slider_font_scale"
        android:weightSum="1">

        <Button
            android:id="@+id/button_increase_font_scale"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/increase_font_scale" />

        <Button
            android:id="@+id/button_decrease_font_scale"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/decrease_font_scale"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/toggle_button_handle_orientation_screen_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/toggle_button_handle_orientation_screen"
        app:layout_constraintTop_toBottomOf="@id/container_increase_decrease_font_scale_buttons"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/toggle_button_handle_orientation_screen"
        android:text="@string/toggle_button_handle_orientation_screen_portrait"
        />

    <ToggleButton
        android:id="@+id/toggle_button_handle_orientation_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/toggle_button_handle_orientation_screen_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_increase_decrease_font_scale_buttons"
        android:textOff="@string/toggle_button_handle_orientation_screen_portrait"
        android:textOn="@string/toggle_button_handle_orientation_screen_landscape"
        />


    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/container_device_config_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toggle_button_handle_orientation_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
