<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDEDE"
    android:orientation="vertical"
    tools:context=".tutorial.google.view.bottomsheet.aboutbottomsheetbehavior.MenuActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </com.google.android.material.appbar.AppBarLayout>


    <Button
        android:id="@+id/btnPersistent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/black"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/persistent_bottom_sheet"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnModal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/black"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/modal_bottom_sheet_bottomsheetdialog"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnModalFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/black"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/modal_bottom_sheet_bottomsheetdialogfragment"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>